Add missing kxmlgui5 files

--- a/rpm/khelpcenter.yaml
+++ b/rpm/khelpcenter.yaml
@@ -61,6 +61,7 @@ Files:
     - "%{_kf5_libdir}/libexec/khc_docbookdig.pl"
     - "%{_kf5_libdir}/libkdeinit5_khelpcenter.so"
     - "%{_kf5_sharedir}/khelpcenter"
+    - "%{_kf5_sharedir}/kxmlgui5/khelpcenter/*"
     - "%{_datadir}/applications/Help.desktop"
     - "%{_datadir}/config.kcfg/khelpcenter.kcfg"
     - "%{_kf5_servicesdir}/*"
