Glob desktop files

--- a/packaging/khelpcenter.yaml
+++ b/packaging/khelpcenter.yaml
@@ -61,8 +61,8 @@ Files:
     - "%{_kf5_libdir}/libkdeinit5_khelpcenter.so"
     - "%{_kf5_sharedir}/khelpcenter"
     - "%{_kf5_sharedir}/kxmlgui5/khelpcenter/*"
-    - "%{_datadir}/applications/Help.desktop"
-    - "%{_datadir}/config.kcfg/khelpcenter.kcfg"
+    - "%{_kf5_sharedir}/applications/*.desktop"
+    - "%{_kf5_sharedir}/config.kcfg/khelpcenter.kcfg"
     - "%{_kf5_servicesdir}/*"
     - "%{_kf5_dbusinterfacesdir}/org.kde.khelpcenter.kcmhelpcenter.xml"
     - "%{_kf5_htmldir}/en/khelpcenter"
